--- a/basic/web/css/phone.css
+++ b/basic/web/css/phone.css
@@ -1,19 +1,21 @@
-body {
-    background: #333;
-    font-size: large;
-}
+@media screen and (max-width: 600px) {
+    body {
+        background: #333;
+        font-size: large;
+    }
 
-#page-wrap {
-    width: 550px;
-}
-/*#page-wrap:before { content: "phone Layout"; }*/
-#secondary-two {
-    display: none;
-}
+    #page-wrap {
+        width: 550px;
+    }
+    /*#page-wrap:before { content: "phone Layout"; }*/
+    #secondary-two {
+        display: none;
+    }
 
-#main-content-full {
-    display: none;
-}
+    #main-content-full {
+        display: none;
+    }
 
-#main-content-fullHidden {
+    #main-content-fullHidden {
+    }
 }
