--- a/basic/web/css/site.css
+++ b/basic/web/css/site.css
@@ -22,6 +22,7 @@ body {
     background: #EBEFDE;
     padding: 10px;
     margin-bottom: 5px;
+    min-height: 35px;
     border: solid 2px #999;
     border-radius: 15px;
     -moz-border-radius: 15px;
@@ -77,7 +78,7 @@ ul.navLinks li {
 ul#menu {
     font-size: 1.3em;
     font-weight: 600;
-    margin: 15px 0 5px;
+    margin: 0px 0 5px;
     padding: 0;
     display: block;
     float: right;
