--- a/basic/web/css/site.css
+++ b/basic/web/css/site.css
@@ -174,6 +174,10 @@ table td, th {
     display: none;
 }
 
+.hiddenGridActions {
+    display: none;
+}
+
 .aMovePendingForEnvelope {
     text-decoration: none;
     color: black;
